made loads of changes

--- a/views/dashBoard.ejs
+++ b/views/dashBoard.ejs
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hello!!</h1>
-<p>this is index</p>
-<a href="/login">login</a>
+<h1>dashboard!</h1>
+<p>projects should appear</p>
 </body>
 </html>
