--- a/views/project.ejs
+++ b/views/project.ejs
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hello!!</h1>
-<p>this is index</p>
-<a href="/login">login</a>
+<h1>Projects</h1>
+<p>task list should appear</p>
 </body>
 </html>
