--- a/views/create_account.ejs
+++ b/views/create_account.ejs
@@ -9,11 +9,11 @@
 <h1>login page!</h1>
 <div class="container">
     <form method="post" action="/login/create">
-        <label for="name"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="name" required>
+        <label for="usr_name"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="usr_name" required>
         <br>
 
-        <label for="mail"><b>Username</b></label>
+        <label for="mail"><b>Mail Address</b></label>
         <input type="email" placeholder="Enter Mail Address" name="mail" required>
         <br>
 
