--- a/views/dashBoard.ejs
+++ b/views/dashBoard.ejs
@@ -8,5 +8,24 @@
 <body>
 <h1>dashboard!</h1>
 <p>projects should appear</p>
+<table border="1">
+    <thead>
+    <tr>
+        <th>project ID</th>
+        <th>Name</th>
+        <th>description</th>
+    </tr>
+    </thead>
+    <tbody>
+    <% rows.forEach(row => { %>
+        <tr>
+            <td><%= row.projectID %></td>
+            <td><%= row.name %></td>
+            <td><%= row.description %></td>
+        </tr>
+    <% }) %>
+    </tbody>
+</table>
+<a href="/dashboard/create-project">create project</a>
 </body>
 </html>
