complete task part

--- a/views/create_account.ejs
+++ b/views/create_account.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>login page!</h1>
+<h1>create account!</h1>
 <div class="container">
     <form method="post" action="/login/create">
         <label for="usr_name"><b>Username</b></label>
@@ -20,7 +20,7 @@
         <label for="password"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="password" required>
 
-        <button type="submit">Login</button>
+        <button type="submit">submit</button>
     </form>
 </div>
 </body>
