--- a/views/create_project.ejs
+++ b/views/create_project.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>login page!</h1>
+<h1>create project!</h1>
 <div class="container">
     <form method="post" action="/dashboard/create-project">
         <label for="project_name"><b>Project Name</b></label>
@@ -16,7 +16,7 @@
         <label for="project_description"><b>Project Description</b></label>
         <input type="text" placeholder="Enter Project Description" name="project_description" required>
 
-        <button type="submit">Login</button>
+        <button type="submit">submit</button>
     </form>
 </div>
 </body>
