--- a/views/create_task.ejs
+++ b/views/create_task.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>login page!</h1>
+<h1>create task!</h1>
 <div class="container">
     <form method="post" action="/project/create-task">
         <label for="task_name"><b>Task Name</b></label>
@@ -28,7 +28,7 @@
         <label for="risk"><b>Risk</b></label>
         <input type="text" placeholder="Enter Risk" name="risk" required>
 
-        <button type="submit">Login</button>
+        <button type="submit">submit</button>
     </form>
 </div>
 </body>
