completed commenting system

--- a/views/dashBoard.ejs
+++ b/views/dashBoard.ejs
@@ -7,11 +7,11 @@
 </head>
 <body>
 <h1>dashboard!</h1>
+<p><a href="/dashboard">dashboard</a> > </p>
 <p>projects should appear</p>
 <table border="1">
     <thead>
     <tr>
-        <th>project ID</th>
         <th>Name</th>
         <th>description</th>
     </tr>
@@ -19,14 +19,12 @@
     <tbody>
     <% rows.forEach(row => { %>
         <tr>
-            <td><a href="/project?pid=<%= row.projectID %>"><%= row.projectID %></a></td>
-            <td><%= row.name %></td>
+            <td><a href="/project?pid=<%= row.projectID %>"><%= row.name %></a></td>
             <td><%= row.description %></td>
         </tr>
     <% }) %>
     </tbody>
 </table>
-<a href="/dashboard">back to dashboard</a>
 <br>
 <a href="/dashboard/create-project">create project</a>
 </body>
