--- a/views/project.ejs
+++ b/views/project.ejs
@@ -10,23 +10,22 @@
     <div class="header">
         <h1>Project Details</h1>
     </div>
+    <p><a href="/dashboard">dashboard</a> > <a href="/project?pid=<%= projectData[0].projectID%>"><%= projectData[0].name%></a> > </p>
 
     <h2>Project Information</h2>
     <% if (projectData && projectData.length > 0) { %>
         <table border="1">
             <thead>
             <tr>
-                <% Object.keys(projectData[0]).forEach(function(key) { %>
-                    <th><%= key %></th>
-                <% }); %>
+                <th>Project Name</th>
+                <th>description</th>
             </tr>
             </thead>
             <tbody>
             <% projectData.forEach(function(row) { %>
                 <tr>
-                    <% Object.values(row).forEach(function(value) { %>
-                        <td><%= value %></td>
-                    <% }); %>
+                    <td><a href="/project?pid=<%= row.projectID%>"><%= row.name%></a></td>
+                    <td><%= row.description%></td>
                 </tr>
             <% }); %>
             </tbody>
@@ -35,22 +34,28 @@
         <p>No project data available.</p>
     <% } %>
 
-    <h2>Tasks</h2>
+    <h2>tasks</h2>
     <% if (tasks && tasks.length > 0) { %>
         <table border="1">
             <thead>
             <tr>
-                <% Object.keys(tasks[0]).forEach(function(key) { %>
-                    <th><%= key %></th>
-                <% }); %>
+                <th>Task Name</th>
+                <th>description</th>
+                <th>created date</th>
+                <th>due date</th>
+                <th>priority</th>
+                <th>risk</th>
             </tr>
             </thead>
             <tbody>
             <% tasks.forEach(function(row) { %>
                 <tr>
-                    <% Object.values(row).forEach(function(value) { %>
-                        <td><%= value %></td>
-                    <% }); %>
+                    <td><a href="/task?pid=<%= projectData[0].projectID%>&tid=<%= row.taskID%>"><%= row.name%></a></td>
+                    <td><%= row.description%></td>
+                    <td><%= row.created%></td>
+                    <td><%= row.due%></td>
+                    <td><%= row.priority%></td>
+                    <td><%= row.risk%></td>
                 </tr>
             <% }); %>
             </tbody>
@@ -59,7 +64,6 @@
         <p>No tasks available for this project.</p>
     <% } %>
 </div>
-<a href="/dashboard">back to dashboard</a>
 <br>
 <a href="/project/create-task">create task</a>
 </body>
