--- a/views/create_task.ejs
+++ b/views/create_task.ejs
@@ -17,8 +17,12 @@
         <input type="text" placeholder="Enter Task Description" name="task_description" required>
         <br>
 
+        <label for="start_date"><b>Start Date</b></label>
+        <input type="date" placeholder="Enter Start Date" name="start_date" required>
+        <br>
+
         <label for="due_date"><b>Due Date</b></label>
-        <input type="text" placeholder="Enter Due Date" name="due_date" required>
+        <input type="date" placeholder="Enter Due Date" name="due_date" required>
         <br>
 
         <label for="priority"><b>Priority</b></label>
@@ -27,6 +31,22 @@
 
         <label for="risk"><b>Risk</b></label>
         <input type="text" placeholder="Enter Risk" name="risk" required>
+        <br>
+
+        <label for="responsible"><b>Responsible</b></label>
+        <input type="text" placeholder="Enter Responsible Person" name="responsible" required>
+        <br>
+
+        <label for="accountable"><b>Accountable</b></label>
+        <input type="text" placeholder="Enter Accountable Person" name="accountable" required>
+        <br>
+
+        <label for="consulted"><b>Consulted</b></label>
+        <input type="text" placeholder="Enter Consulted Person" name="consulted" required>
+        <br>
+
+        <label for="informed"><b>Informed</b></label>
+        <input type="text" placeholder="Enter Informed Person" name="informed" required>
 
         <button type="submit">submit</button>
     </form>
