--- a/views/project.ejs
+++ b/views/project.ejs
@@ -45,6 +45,10 @@
                 <th>due date</th>
                 <th>priority</th>
                 <th>risk</th>
+                <th>responsible</th>
+                <th>accountable</th>
+                <th>consulted</th>
+                <th>informed</th>
             </tr>
             </thead>
             <tbody>
@@ -56,6 +60,10 @@
                     <td><%= row.due%></td>
                     <td><%= row.priority%></td>
                     <td><%= row.risk%></td>
+                    <td><%= row.responsible%></td>
+                    <td><%= row.accountable%></td>
+                    <td><%= row.consulted%></td>
+                    <td><%= row.informed%></td>
                 </tr>
             <% }); %>
             </tbody>
