--- a/views/task.ejs
+++ b/views/task.ejs
@@ -45,6 +45,10 @@
                 <th>due date</th>
                 <th>priority</th>
                 <th>risk</th>
+                <th>responsible</th>
+                <th>accountable</th>
+                <th>consulted</th>
+                <th>informed</th>
             </tr>
             </thead>
             <tbody>
@@ -52,10 +56,14 @@
                 <tr>
                     <td><a href="/task?pid=<%= projectData[0].projectID%>&tid=<%= row.taskID%>"><%= row.name%></a></td>
                     <td><%= row.description%></td>
-                    <td><%= row.created%></td>
+                    <td><%= row.created_at%></td>
                     <td><%= row.due%></td>
                     <td><%= row.priority%></td>
                     <td><%= row.risk%></td>
+                    <td><%= row.responsible%></td>
+                    <td><%= row.accountable%></td>
+                    <td><%= row.consulted%></td>
+                    <td><%= row.informed%></td>
                 </tr>
             <% }); %>
             </tbody>
