--- a/views/edit_project.ejs
+++ b/views/edit_project.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>create project!</h1>
+<h1>edit project!</h1>
 <div class="container">
     <form method="post" action="/project/edit-project">
         <label for="project_name"><b>Project Name</b></label>
