--- a/views/edit_task.ejs
+++ b/views/edit_task.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>create task!</h1>
+<h1>edit task!</h1>
 <div class="container">
     <form method="post" action="/task/edit-task">
         <label for="task_name"><b>Task Name</b></label>
