--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 <h1>login page!</h1>
 <div class="container">
     <form method="post" action="/login">
-        <label for="mail"><b>Username</b></label>
+        <label for="mail"><b>Mail Address</b></label>
         <input type="text" placeholder="Enter Username" name="mail" required>
         <br>
 
