added icon system

--- a/views/create_account.ejs
+++ b/views/create_account.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>create account!</h1>
+<p><a href="/">ホーム</a></p>
 <div class="container">
     <form method="post" action="/login/create">
         <label for="usr_name"><b>Username</b></label>
