--- a/views/create_project.ejs
+++ b/views/create_project.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>create project!</h1>
+<p><a href="/">ホーム</a></p>
 <div class="container">
     <form method="post" action="/dashboard/create-project">
         <label for="project_name"><b>Project Name</b></label>
