--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,7 +7,9 @@
 </head>
 <body>
 <h1>dashboard!</h1>
-<p><a href="/dashboard">dashboard</a> > </p>
+<p><a href="/">ホーム</a> > <a href="/dashboard">dashboard</a> > </p>
+<p>ようこそ<%= userName%>さん!</p>
+<a href="/profile?uid=<%= userID%>">マイページ</a>
 <p>projects should appear</p>
 <table border="1">
     <thead>
