--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>login page!</h1>
+<p><a href="/">ホーム</a></p>
 <div class="container">
     <form method="post" action="/login">
         <label for="mail"><b>Mail Address</b></label>
