--- a/views/edit_task.ejs
+++ b/views/edit_task.ejs
@@ -34,19 +34,52 @@
         <br>
 
         <label for="responsible"><b>Responsible</b></label>
-        <input type="text" value="<%= taskData[0].responsible %>" name="responsible" required>
+        <% if(users) { %>
+            <select name="responsible">
+                <% users.forEach( row => { %>
+                    <option value="<%= row.name%>"><%= row.name %></option>
+                <% }) %>
+            </select>
+        <% } else { %>
+            <input type="text" placeholder="Enter Responsible" name="responsible" required>
+        <% } %>
         <br>
 
         <label for="accountable"><b>Accountable</b></label>
-        <input type="text" value="<%= taskData[0].accountable %>" name="accountable" required>
+        <%if(users) { %>
+            <select name="accountable">
+                <% users.forEach( row => { %>
+                    <option value="<%= row.name%>"><%= row.name %></option>
+                <% }) %>
+            </select>
+        <% } else { %>
+            <input type="text" placeholder="Enter Accountable" name="accountable" required>
+        <% } %>
         <br>
 
         <label for="consulted"><b>Consulted</b></label>
-        <input type="text" value="<%= taskData[0].consulted %>" name="consulted" required>
+        <% if(users) { %>
+            <select name="consulted">
+                <% users.forEach( row => { %>
+                    <option value="<%= row.name%>"><%= row.name %></option>
+                <% }) %>
+            </select>
+        <% } else { %>
+            <input type="text" placeholder="Enter Consulted" name="consulted" required>
+        <% } %>
         <br>
 
         <label for="informed"><b>Informed</b></label>
-        <input type="text" value="<%= taskData[0].informed %>" name="informed" required>
+        <% if(users) { %>
+            <select name="informed">
+                <% users.forEach( row => { %>
+                    <option value="<%= row.name%>"><%= row.name %></option>
+                <% }) %>
+            </select>
+        <% } else { %>
+            <input type="text" placeholder="Enter Informed" name="informed" required>
+        <% } %>
+        <br>
 
         <button type="submit">submit</button>
     </form>
