--- a/views/project.ejs
+++ b/views/project.ejs
@@ -130,7 +130,7 @@
             <tbody>
             <% tasks.forEach(function(row) { %>
                 <tr>
-                    <td><a href="/task?pid=<%= projectData[0].projectID%>&tid=<%= row.taskID%>"><%= row.name%></a></td>
+                    <td><a href="/task?tid=<%= row.taskID%>"><%= row.name%></a></td>
                     <td><%= row.description%></td>
                     <td><%= row.created_at%></td>
                     <td><%= row.due%></td>
