added a link on dashboard to tasks

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -31,5 +31,7 @@
 </table>
 <br>
 <a href="/dashboard/create-project">create project</a>
+
+<a href="/task/tasks">view task list</a>
 </body>
 </html>
